src/objects/Request__c.object
<CustomObject>
    <description>This object was created to organize and prioritize end user requests for RIskonnect service.</description>
    <fields>
        <fullName>Assigned_Name__c</fullName>
        <description>Riskonnect personnel assigned to complete this Request. To be populated by Riskonnect.</description>
        <inlineHelpText>Riskonnect personnel assigned to complete this Request. To be populated by Riskonnect.</inlineHelpText>
        <label>Assigned Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Riskonnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_Lag_Days__c</fullName>
        <formula>Date_Resolved__c - DATEVALUE(Date_Status_Not_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closure Lag Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Status_Not_New__c</fullName>
        <label>Date Status Change from New</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <inlineHelpText>Used to notify correct contact when request statuses are changed.  Will default to created by user&apos;s email address if blank</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion__c</fullName>
        <label>Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Request_Assigned__c</fullName>
        <description>Holds date/time that a new request is changed to another status (assigned and in progress).  Used for calculations done in Dashboards</description>
        <label>New Request Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RK_Request_ID__c</fullName>
        <displayFormat>{YYYY}-{MM}-{0}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement/Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <label>Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Lag_Days__c</fullName>
        <formula>Date_Status_Not_New__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Lag Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status_Image__c</fullName>
        <formula>IMAGE(
CASE( TEXT(Request_Status__c) ,
&quot;New Request&quot;, &quot;servlet/servlet.FileDownload?file=015F0000001wZvv&quot; ,
&quot;Pending Client Info/Action&quot;, &quot;servlet/servlet.FileDownload?file=015F0000001wZvx&quot;,
&quot;In Progress&quot;,&quot;servlet/servlet.FileDownload?file=015F0000001wZvs&quot;,
&quot;Deferred&quot;, &quot;servlet/servlet.FileDownload?file=015F0000001wZvq&quot;,
&quot;Complete&quot;, &quot;servlet/servlet.FileDownload?file=015F0000001wZvn&quot;,
&quot;/img/&quot;),
&quot;Compliance Flag&quot;)</formula>
        <label>Request Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Client Info/Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Client requested Due Date.  This will help prioritize multiple requests with the same priority value.  The Riskonnect team will review and populate the Estimated Completion Date based on the priorities, work effect, etc.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <description>Documentation of Final Resolution to Request</description>
        <inlineHelpText>Documentation of Final Resolution to Request</inlineHelpText>
        <label>Resolution Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Request_Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Estimated_Completion__c</columns>
        <columns>Date_Resolved__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assigned_Name__c</columns>
        <columns>Request_Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Email_From__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Deferred</value>
        </filters>
        <label>All Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_New_Request</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Email_From__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New Request</value>
        </filters>
        <label>All New Request</label>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_From__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assigned_Name__c</columns>
        <columns>Request_Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Requests</label>
    </listViews>
    <listViews>
        <fullName>Deferred</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_From__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assigned_Name__c</columns>
        <columns>Request_Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </filters>
        <label>Deferred/Parking Lot</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IP</fullName>
        <columns>NAME</columns>
        <columns>Email_From__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>NRCLW</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_From__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assigned_Name__c</columns>
        <columns>Request_Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New Request,In Progress,Pending Action</value>
        </filters>
        <filters>
            <field>Date_Resolved__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Open Requests and Completed in Last Week</label>
    </listViews>
    <listViews>
        <fullName>ORATC</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_From__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assigned_Name__c</columns>
        <columns>Request_Status_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New Request,In Progress,Pending Client Info/Action</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>Open Requests assigned to Client</label>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Request_Entry</fullName>
        <active>true</active>
        <label>Request Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requests</fullName>
        <active>true</active>
        <description>Full Request Record</description>
        <label>Requests</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completed_request_must_have_resoved_date</fullName>
        <active>false</active>
        <description>When the request status is set to completed there must be a resolved date.</description>
        <errorConditionFormula>ISPICKVAL( Request_Status__c , &quot;Complete&quot;) &amp;&amp;  ISNULL( Date_Resolved__c )</errorConditionFormula>
        <errorDisplayField>Assigned_To__c</errorDisplayField>
        <errorMessage>Must provide a Date Resolved when setting Request Status to Complete</errorMessage>
    </validationRules>
</CustomObject>